[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'mne_lsl',
  'numpy>=1.21',
  'packaging',
  'psutil',
  'pyparallel; sys_platform == "linux"',
  'pyserial',
]
description = 'Provides byte (0 to 255) triggers on serial/parallel ports and on LSL streams.'
keywords = [
  'parallel',
  'python',
  'serial',
  'triggers',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'byte_triggers'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.3.0.dev'

[project.optional-dependencies]
all = [
  'byte_triggers[build]',
  'byte_triggers[doc]',
  'byte_triggers[style]',
  'byte_triggers[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'furo',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = [
  'byte_triggers[all]',
]
style = [
  'bibclean',
  'black',
  'codespell',
  'isort',
  'pydocstyle[toml]',
  'ruff',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest',
  'pytest-cov',
  'pytest-timeout',
]

[project.scripts]
byte_triggers-sys_info = 'byte_triggers.commands.sys_info:run'

[project.urls]
documentation = 'https://fcbg-hnp-meeg.github.io/byte-triggers'
homepage = 'https://fcbg-hnp-meeg.github.io/byte-triggers'
source = 'https://github.com/fcbg-hnp-meeg/byte-triggers'
tracker = 'https://github.com/fcbg-hnp-meeg/byte-triggers/issues'

[tool.black]
extend-exclude = '''
(
      __pycache__
    | .github
    | setup.py
    | doc/
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py39']

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/byte_triggers/_version.py',
  '**/byte_triggers/commands/*',
  '**/byte_triggers/io/**',
  '**/byte_triggers/utils/_fixes.py',
  '**/conftest.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'doc/*',
  'setup.py',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^byte_triggers.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []
minversion = '6.0'

[tool.ruff]
extend-exclude = [
  "doc",
  "setup.py",
]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['byte_triggers*tests']
include = ['byte_triggers*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
