[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'mne_lsl>=1.3.1',
  'numpy>=1.26.4',
  'packaging',
  'psutil',
  'pyparallel; sys_platform == "linux"',
  'pyserial',
]
description = 'Provides byte (0 to 255) triggers on serial/parallel ports and on LSL streams.'
keywords = [
  'parallel',
  'python',
  'serial',
  'triggers',
  'lsl',
  'events',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'byte_triggers'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.4.0.dev0'

[project.optional-dependencies]
all = [
  'byte_triggers[build]',
  'byte_triggers[doc]',
  'byte_triggers[style]',
  'byte_triggers[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'furo',
  'intersphinx_registry',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-issues',
  'sphinx-remove-toctrees',
  'sphinxcontrib-bibtex',
]
full = [
  'byte_triggers[all]',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'isort',
  'pydocstyle[toml]',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
byte_triggers-sys_info = 'byte_triggers.commands.sys_info:run'

[project.urls]
documentation = 'https://fcbg-hnp-meeg.github.io/byte-triggers'
source = 'https://github.com/fcbg-hnp-meeg/byte-triggers'
tracker = 'https://github.com/fcbg-hnp-meeg/byte-triggers/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/byte_triggers/_version.py',
  '**/byte_triggers/commands/*',
  '**/byte_triggers/io/**',
  '**/byte_triggers/utils/_fixes.py',
  '**/conftest.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'doc/*',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!__init__|test_).*\.py'
match-dir = '^byte_triggers.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  'doc',
  'byte_triggers/io',
]
line-length = 88
target-version = 'py39'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'E', 'F', 'G', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'UP007', # 'Use `X | Y` for type annotations', requires python 3.10
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['byte_triggers*tests']
include = ['byte_triggers*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
